fixed bug in Header component, <a> tag was wrapping a <Link>

--- a/styles/global.css
+++ b/styles/global.css
@@ -158,6 +158,26 @@ Image {
   text-align: center;
   padding: 10px;
 }
+
+/* Blog index css */
+.blogGrid {
+  display: grid;
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+@media (min-width: 640px) {
+  .blogGrid {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    gap: 2.5rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .blogGrid {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+}
+
 #blogs {
   text-align: center;
   padding-top: 45px;
